Fixed java.lang.reflect.InaccessibleObjectException
See https://github.com/eclipse/leshan/issues/1099#issuecomment-929033402