@@ -14,9 +14,9 @@ set -xe
 
 case $SERVICE in
   server)
-    java -jar ./leshan-server-demo.jar "$@" ;;
+    java --add-opens java.base/java.util=ALL-UNNAMED -jar ./leshan-server-demo.jar "$@" ;;
   bootstrap|bsserver)
-    java -jar ./leshan-bsserver-demo.jar "$@" ;;
+    java --add-opens java.base/java.util=ALL-UNNAMED -jar ./leshan-bsserver-demo.jar "$@" ;;
   *)
     echo "Usage: <server|bootstrap>"
     exit 1
